--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,8 @@
 plugins {
     id 'com.android.application'
     id 'kotlin-android'
+    id  'kotlin-android-extensions'
+    id 'kotlin-kapt'
 }
 
 android {
@@ -52,4 +54,11 @@ dependencies {
 
     //card
     implementation "androidx.cardview:cardview:1.0.0"
+
+    //Retrofit
+    implementation "com.squareup.okhttp3:okhttp:3.12.1"
+    implementation 'com.squareup.retrofit2:retrofit:2.6.0'
+    implementation 'com.squareup.okhttp3:logging-interceptor:3.11.0'
+    implementation 'com.squareup.retrofit2:converter-gson:2.5.0'
+    implementation 'com.google.code.gson:gson:2.8.5'
 }
