--- a/app/build.gradle
+++ b/app/build.gradle
@@ -64,4 +64,11 @@ dependencies {
 
     // image
     implementation 'com.squareup.picasso:picasso:2.71828'
+
+    //sqlite
+    implementation "androidx.room:room-runtime:2.2.5"
+    kapt  "androidx.room:room-compiler:2.2.5"
+    implementation 'io.reactivex.rxjava2:rxandroid:2.0.2'
+    implementation "androidx.room:room-runtime:2.2.5"
+    annotationProcessor "androidx.room:room-compiler:2.2.5"
 }
