--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -23,6 +23,9 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".activity.PengirimanActivity" />
+        <activity android:name=".activity.ListAlamatActivity" />
+        <activity android:name=".activity.TambahAlamatActivity" />
     </application>
 
 </manifest>
